--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack index.js dist/index.js",
-    "start": "node --inspect-brk index.js",
-    "start-wp": "node --inspect-brk dist/index.js"
+    "check-node": "node index.js",
+    "check-wp": "npm run build; node dist/index.js"
   },
   "author": "",
   "license": "ISC",
